--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
     <<: *vse
     docker:
       - image: circleci/python:3.8.1
+    environment:
+      - ANSIBLE_VAULT_PASSWORD_FILE: ./ansible/vault_pass.txt
     steps:
       - attach_workspace:
           at: .
